[gd_scene load_steps=15 format=3 uid="uid://cqc0vbl1gl11m"]

[ext_resource type="Script" path="res://Sub Scenes/Entity_AI_Bird/AI_Bird.gd" id="1_g4xov"]
[ext_resource type="Script" path="res://Sub Scenes/Entity_AI_Bird/AI_BirdCharacterBody.gd" id="2_sf0vd"]
[ext_resource type="Texture2D" uid="uid://p4bk5tdue3ta" path="res://Visuals/Art Assets/draft_sibling_bird.png" id="3_ddn7a"]
[ext_resource type="Texture2D" uid="uid://dt7qp18imoqyy" path="res://Visuals/Art Assets/dead_sibling.png" id="3_ukxu6"]
[ext_resource type="Texture2D" uid="uid://28v4ug0v4asp" path="res://Visuals/Placeholder Graphics/protoBody.png" id="4_uem5o"]
[ext_resource type="Script" path="res://Sub Scenes/Entity_AI_Bird/eater_zone.gd" id="5_qgt2p"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_y002n"]
radius = 13.0
height = 34.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_82nrl"]
height = 26.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_be47h"]
height = 24.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tbpsy"]
radius = 13.0
height = 34.0

[sub_resource type="CircleShape2D" id="CircleShape2D_cyhn5"]
radius = 169.027

[sub_resource type="Animation" id="Animation_eixkr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("eater_zone:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("bird_sprite_body/bird_sprite_head:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4.76837e-06, -824.207)]
}

[sub_resource type="Animation" id="Animation_71aru"]
resource_name = "ai_peck"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("eater_zone:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("bird_sprite_body/bird_sprite_head:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4),
"transitions": PackedFloat32Array(0.466517, 2.63902, 0.277392, 1),
"update": 0,
"values": [Vector2(4.76837e-06, -824.207), Vector2(0, -770), Vector2(0, -850), Vector2(0, -823)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5mlbk"]
_data = {
"RESET": SubResource("Animation_eixkr"),
"ai_peck": SubResource("Animation_71aru")
}

[node name="AI_Bird" type="Node2D"]
z_index = 1
script = ExtResource("1_g4xov")

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
collision_mask = 7
motion_mode = 1
platform_on_leave = 2
script = ExtResource("2_sf0vd")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="CharacterBody2D"]

[node name="bird_sprite_body" type="Sprite2D" parent="CharacterBody2D"]
position = Vector2(0, 2.375)
scale = Vector2(0.0392962, 0.034427)
texture = ExtResource("3_ddn7a")
region_enabled = true
region_rect = Rect2(469.305, 910.187, 1127.86, 1082.29)

[node name="bird_sprite_head" type="Sprite2D" parent="CharacterBody2D/bird_sprite_body"]
position = Vector2(4.76837e-06, -824.207)
scale = Vector2(0.939346, 1)
texture = ExtResource("3_ddn7a")
region_enabled = true
region_rect = Rect2(734.744, 110.154, 596.513, 781.436)

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody2D"]
visible = false
position = Vector2(-0.499999, -12.5)
scale = Vector2(0.0395508, 0.034668)
texture = ExtResource("3_ddn7a")

[node name="dead_bird_sprite" type="Sprite2D" parent="CharacterBody2D"]
visible = false
position = Vector2(0, -15)
scale = Vector2(0.0324346, 0.0457911)
texture = ExtResource("3_ukxu6")
region_rect = Rect2(137.815, 260.094, 1875.97, 1256.97)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_y002n")

[node name="eater_detector_zone" type="Area2D" parent="CharacterBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/eater_detector_zone"]
position = Vector2(0, -26)
shape = SubResource("CapsuleShape2D_82nrl")

[node name="eater_zone" type="Area2D" parent="CharacterBody2D" groups=["ai_attacker", "eater"]]
monitoring = false
monitorable = false
script = ExtResource("5_qgt2p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/eater_zone"]
position = Vector2(0, -26)
shape = SubResource("CapsuleShape2D_be47h")

[node name="hitbox_sprite" type="Sprite2D" parent="CharacterBody2D/eater_zone"]
visible = false
position = Vector2(1.7053e-13, -26)
scale = Vector2(0.625, 0.75)
texture = ExtResource("4_uem5o")

[node name="body_zone" type="Area2D" parent="CharacterBody2D" groups=["bird"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/body_zone"]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_tbpsy")

[node name="detector_zone" type="Area2D" parent="CharacterBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/detector_zone"]
shape = SubResource("CircleShape2D_cyhn5")

[node name="Debug_Satiation_Label" type="Label" parent="CharacterBody2D"]
visible = false
modulate = Color(0.945098, 0.121569, 0.156863, 1)
offset_left = -19.0
offset_top = -2.0
offset_right = 19.0
offset_bottom = 21.0

[node name="boolean_tag" type="Label" parent="CharacterBody2D"]
visible = false
modulate = Color(0.8, 0, 0.105882, 1)
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0

[node name="Debug_AI_State" type="Label" parent="CharacterBody2D"]
visible = false
modulate = Color(0.980392, 0, 0.247059, 1)
offset_left = -19.0
offset_top = -46.0
offset_right = 21.0
offset_bottom = -23.0

[node name="hunger_deficit_label" type="Label" parent="CharacterBody2D"]
visible = false
offset_left = -59.0
offset_top = -35.0
offset_right = -19.0
offset_bottom = -12.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="CharacterBody2D"]
libraries = {
"": SubResource("AnimationLibrary_5mlbk")
}

[node name="StateTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="area_entered" from="CharacterBody2D/eater_detector_zone" to="." method="_on_eater_detector_zone_area_entered"]
[connection signal="area_entered" from="CharacterBody2D/eater_zone" to="." method="_on_eater_zone_area_entered"]
[connection signal="area_entered" from="CharacterBody2D/body_zone" to="." method="_on_body_zone_area_entered"]
[connection signal="area_exited" from="CharacterBody2D/body_zone" to="." method="_on_body_zone_area_exited"]
[connection signal="timeout" from="StateTimer" to="." method="_on_timer_timeout"]
